--- a/app/assets/stylesheets/grid_preview.css.scss
+++ b/app/assets/stylesheets/grid_preview.css.scss
@@ -1,14 +1,14 @@
 .preview_content{
   ul {
     list-style: none;
-    padding-left: 15px;
+    padding-left: 0;
 
     li {
       padding: 5px 0;
       font-size: 12px;
 
       label {
-        width: 80px;
+        width: 100px;
         text-align: right;
         display: inline-block;
         margin-right: 5px;
