--- a/app/assets/stylesheets/grid_overrides.css.scss
+++ b/app/assets/stylesheets/grid_overrides.css.scss
@@ -4,7 +4,7 @@ $column_header_height: 23px;
 $column_header_padding: 4px;
 $column_header_border_color: #dce0e2;
 
-$odd_row_background: #f5f9fc;
+$row_background: #f2f2f2;
 $selected_row_background: #81abd7;
 
 $pager_background: #eff3f8;
@@ -36,27 +36,17 @@ $pager_background: #eff3f8;
   height: $column_header_height;
   line-height: $column_header_height - $column_header_padding * 2;
   padding: $column_header_padding;
-  background: image-url("ui/column_header_background.png") repeat-x;
   border: none;
   border-left: 1px solid $column_header_border_color;
   text-align: center;
   position: relative;
 }
 
-.slick-header-column.ui-state-default.ui-state-hover {
-  background: image-url("ui/column_header_background_hover.png") repeat-x;
-}
-
-.ui-state-default.slick-header-column.slick-header-column-sorted {
-  background: image-url("ui/column_header_background_selected.png") repeat-x;
-  font-style: normal;
-}
-
 .slick-sort-indicator-desc,.slick-sort-indicator-asc {
   display: block;
   position: absolute;
   right: 4px;
-  top: 7px;
+  top: 15px;
   width: 9px;
   height: 8px;
   background: image-url("ui/sort_indicator_desc.png") no-repeat;
@@ -70,9 +60,9 @@ $pager_background: #eff3f8;
 
 //.ui-widget-content.slick-row.even,.ui-widget-content.slick-row.odd
 
-.ui-widget-content.slick-row.odd {
-  background: $odd_row_background;
-}
+// .ui-widget-content.slick-row.odd {
+//   background: $odd_row_background;
+// }
 
 .slick-cell {
   font-size: 12px;
@@ -88,9 +78,6 @@ $pager_background: #eff3f8;
   }
   &.master_flashing {
     background-color: pink;
-  }
-  &.selected {
-    background: $selected_row_background;
   }
   &.editable {
     background-color: ivory;
@@ -162,4 +149,40 @@ $pager_background: #eff3f8;
 
 .slick-viewport {
   background-color: white;
+}
+
+
+/////////////////////////////////
+// .slick-row {
+//   height: 35px!important;
+// }
+
+.slick-cell, .slick-headerrow-column {
+  border: none;
+  height: 35px!important;
+  line-height: 35px;
+  &.selected {
+    background: $row_background;
+  }
+}
+
+.ui-state-default.slick-header-column {
+  border: none;
+  border-bottom: 1px solid silver;
+  font-style: normal;
+  font-weight: bold;
+  height: 35px;
+  line-height: 35px;
+  padding: 0;
+  &:last-child {
+    border-right: 1px solid silver;
+  }
+}
+
+.slick-row.ui-widget-content, .slick-row.ui-state-active {
+  border-right: 1px solid silver;
+  border-bottom: 1px solid silver;
+  &:hover {
+    background: $row_background;
+  }
 }
