--- a/app/assets/stylesheets/SlickGrid/slick.grid.css
+++ b/app/assets/stylesheets/SlickGrid/slick.grid.css
@@ -5,40 +5,39 @@ No built-in (selected, editable, highlight, flashing, invalid, loading, :focus) 
 classes should alter those!
 */
 
-
-.slick-header.ui-state-default, .slick-headerrow.ui-state-default {
+.slick-header.ui-state-default, .slick-headerrow.ui-state-default, .slick-footerrow.ui-state-default  {
   width: 100%;
   overflow: hidden;
-  border-left: 0px;
+  border-left: 0px !important;
 }
 
-.slick-header-columns, .slick-headerrow-columns {
-  width: 999999px;
+.slick-header-columns, .slick-headerrow-columns, .slick-footerrow-columns {
   position: relative;
   white-space: nowrap;
   cursor: default;
   overflow: hidden;
 }
 
-
 .slick-header-column.ui-state-default {
   position: relative;
   display: inline-block;
+  /*box-sizing: content-box !important; */
   overflow: hidden;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   height: 16px;
   line-height: 16px;
   margin: 0;
   padding: 4px;
   border-right: 1px solid silver;
-  border-left: 0px;
-  border-top: 0px;
-  border-bottom: 0px;
+  border-left: 0px !important;
+  border-top: 0px !important;
+  border-bottom: 0px !important;
   float: left;
 }
 
-.slick-headerrow-column.ui-state-default {
-    padding: 4px;
+.slick-headerrow-column.ui-state-default, .slick-footerrow-column.ui-state-default {
+  padding: 4px;
 }
 
 .slick-header-column-sorted {
@@ -50,6 +49,8 @@ classes should alter those!
   width: 8px;
   height: 5px;
   margin-left: 4px;
+  margin-top: 6px;
+  float: left;
 }
 
 .slick-sort-indicator-desc {
@@ -83,46 +84,49 @@ classes should alter those!
 .slick-row.ui-widget-content, .slick-row.ui-state-active {
   position: absolute;
   border: 0px;
+  width: 100%;
 }
 
-.slick-cell, .slick-headerrow-column {
-  float: left;
-
+.slick-cell, .slick-headerrow-column , .slick-footerrow-column{
+  position: absolute;
   border: 1px solid transparent;
   border-right: 1px dotted silver;
   border-bottom-color: silver;
-
   overflow: hidden;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
-  white-space: nowrap;
   vertical-align: middle;
   z-index: 1;
   padding: 1px 2px 2px 1px;
-    margin: 0;
-
-
+  margin: 0;
   white-space: nowrap;
-
   cursor: default;
 }
-
+.slick-cell, .slick-headerrow-column{
+  border-bottom-color: silver;
+}
+.slick-footerrow-column {
+  border-top-color: silver;
+}
+ 
 .slick-group {
 }
 
 .slick-group-toggle {
-    display: inline-block;
+  display: inline-block;
 }
 
 .slick-cell.highlighted {
-    background: lightskyblue;
-    background: rgba(0,0,255,0.2);
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    transition: all 0.5s;
+  background: lightskyblue;
+  background: rgba(0, 0, 255, 0.2);
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .slick-cell.flashing {
-    border: 1px solid red !important;
+  border: 1px solid red !important;
 }
 
 .slick-cell.editable {
@@ -141,7 +145,7 @@ classes should alter those!
   display: inline-block;
   background: blue;
   opacity: 0.15;
-  filter: alpha(opacity=15);
+  filter: alpha(opacity = 15);
   cursor: move;
 }
 
@@ -150,11 +154,11 @@ classes should alter those!
   height: 2px;
   background: blue;
   opacity: 0.7;
-  filter: alpha(opacity=70);
+  filter: alpha(opacity = 70);
 }
 
 .slick-selection {
-    z-index: 10;
-    position: absolute;
-    border: 2px dashed black;
+  z-index: 10;
+  position: absolute;
+  border: 2px dashed black;
 }
