--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -42,28 +42,28 @@
                 "data-column"      => column.name,                  |
                 :disabled          => column.options[:auto_fill]    |
 
-            -# - elsif auto_complete_field?(column)
-            -#   = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
-            -#
-            -#   :javascript
-            -#     var choices = "/wulin_master/fetch_distinct_options?"
-            -#                          + "column=#{column_name}"
-            -#                          + "&grid=#{grid.class}"
-            -#                          + "&klass=#{_klass}"
-            -#                          + "&screen=#{screen.class}"
-            -#                          + "&text_attr=#{column_name}";
-            -#     var container = $(".auto-complete-text-field-#{column_name}");
-            -#     var column = {
-            -#       auto_complete: true,
-            -#       width: container.width(),
-            -#       choices: choices
-            -#     };
-            -#     var args = {
-            -#       column: column,
-            -#       container: container
-            -#     };
-            -#     carbonCopyNewEditor = AutoCompleteTextEditorForForm.bind({})
-            -#     carbonCopyNewEditor(args);
+            - elsif auto_complete_field?(column)
+              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+
+              :javascript
+                var choices = "/wulin_master/fetch_distinct_options?"
+                                     + "column=#{column_name}"
+                                     + "&grid=#{grid.class}"
+                                     + "&klass=#{_klass}"
+                                     + "&screen=#{screen.class}"
+                                     + "&text_attr=#{column_name}";
+                var container = $(".auto-complete-text-field-#{column_name}");
+                var column = {
+                  auto_complete: true,
+                  width: container.width(),
+                  choices: choices
+                };
+                var args = {
+                  column: column,
+                  container: container
+                };
+                carbonCopyNewEditor = AutoCompleteTextEditorForForm.bind({})
+                carbonCopyNewEditor(args);
 
             - elsif select_tag_field?(column)
               = select_tag "#{model_name}[#{column_name}]",          |
