--- a/app/assets/javascripts/master/formatters.js.erb
+++ b/app/assets/javascripts/master/formatters.js.erb
@@ -47,7 +47,7 @@
     },
 
     GraphicBoolCellFormatter: function(row, cell, value, columnDef, dataContext) {
-      var html = value ? "<img src='/assets/tick.png'>" : "";
+      var html = value ? '<%= image_tag "tick.png" %>' : '';
       return ApplyStyle(html, columnDef.style || 'text-align:center');
     },
 
